Fixed __drtc_area blocking content when hidden by setting height to 0

--- a/drtc.css
+++ b/drtc.css
@@ -1,5 +1,7 @@
 .__drtc_area {
 	position: absolute;
+	height: 0;
+	overflow: visible;
 }
 
 .__drtc_showhide {
